# accordion-of-bodge

./: .gitignore  Cargo.toml  README.md  aliases.csv  bass.csv  cgriff.csv  keys.csv  plan.todo.txt  todo.txt
accordion/: Cargo.toml
accordion/src/: lib.rs  main.rs
accordion_linux/: Cargo.toml  bass.csv  cgriff.csv  keyboard-c2-c3.csv  keyboard-c4-c5.csv  todo.txt
accordion_linux/src/: main.rs
accordion_win/: Cargo.toml  aliases.csv  bass.csv  cgriff.csv
chord_parser/: Cargo.toml
chord_parser/src/: lib.rs
msg_hook/: Cargo.toml
msg_hook/src/: lib.rs
src/: lib.rs  main.rs
