[package]
name = "accordion-of-bodge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "winerror", "libloaderapi", "processthreadsapi", "winbase"] }
midir = "0.8.0"
chord_parser = { path = "../chord_parser" }